made the code more clear

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<title>Pomodoro</title>
 </head>
 <body onload="doFirst()">
-		<h1 id=clock>25:00</h1>
-		<button onclick="shortBreakStart()">Short Break</button>
-		<button onclick="pomodoroStart()">Pomodoro</button>
-		<button onclick="longBreakStart()">Long Break</button>
+		<h1 id=timer>25:00</h1>
+		<button onclick="short_break()">Short Break</button>
+		<button onclick="pomodoro()">Pomodoro</button>
+		<button onclick="long_break()">Long Break</button>
 		<br>
-		<button onclick="startPause()" id="pauseButton">Start</button>
+		<button onclick="resume_pause()" id="pause_button">Start</button>
 
 </body>
 </html>
