--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="index.js"></script>
 	<title>Pomodoro</title>
 </head>
-<body onload="doFirst()">
+<body onload="init()">
 		<h1 id=timer>25:00</h1>
 		<button onclick="short_break()">Short Break</button>
 		<button onclick="pomodoro()">Pomodoro</button>
